name: linux-cgroup
version: 0.1.1.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright 2014 Christopher Lord
maintainer: christopher@lord.ac
synopsis: Very basic interface to the Linux CGroup Virtual Filesystem
description: This library is a prototype.
category: System
author: Christopher Lord
data-dir: ""
 
library
    build-depends: base >=4.6 && <4.7, filepath >=1.3.0.1 && <1.4
    exposed-modules: System.Linux.Process.CGroup.VFS
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
 
 
