name:                linux-cgroup 
version:             0.1.1.0
synopsis:            Very basic interface to the Linux CGroup Virtual Filesystem
-- description:         
license:             MIT
license-file:        LICENSE
author:              Christopher Lord
maintainer:          christopher@lord.ac
copyright:           Copyright 2014 Christopher Lord
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
  hs-source-dirs:      src
  default-language:    Haskell2010
